# kwin6-bismuth-decoration

./: CMakeLists.txt  README.md  install.sh
src/: CMakeLists.txt
src/kdecoration/: CMakeLists.txt  decoration.cpp  decoration.hpp
